--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="header">Welcome to My Website</h1>
-    <h2 class="subheader">This is a subheader</h2>
-    <p class="text">Here is some paragraph text. It is centered and responsive.</p>
+    <h1 class="header">YOU MAY NOW FAIL TO DESTROY ME</h1>
+    <h2 class="subheader">American Writers on Their Most Dangerous Beliefs</h2>
+    <p class="text">Submissions open until July 15. ≤3000 words, don't punch down. failtodestroy at gmail.</p>
     <img src="https://via.placeholder.com/300" alt="Example Image" class="image" />
   </div>
 </body>
