--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="header">YOU MAY NOW FAIL TO DESTROY ME</h1>
-    <h2 class="subheader">American Writers on Their Most Dangerous Beliefs</h2>
-    <p class="text">Submissions open until July 15. ≤3000 words, don't punch down. failtodestroy at gmail.</p>
     <img src="https://via.placeholder.com/300" alt="Example Image" class="image" />
+    <h1 class="header">YOU MAY NOW FAIL TO DESTROY ME</h1>
+    <h2 class="subheader">AMERICAN WRITERS ON THEIR MOST DANGEROUS BELIEFS</h2>
+    <p class="text">SEND YOUR WORK. ≤3000 WORDS, DON'T PUNCH DOWN. FAILTODESTROY AT GMAIL</p>
+    <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN</p>
+    <p class="text">FEATURING WRITING BY:<br>
+      BRAD NEELY
+    </p>
   </div>
 </body>
 </html>
