--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
   <div class="container">
     <img src="https://via.placeholder.com/300" alt="Example Image" class="image" />
-    <h1 class="header">YOU MAY NOW FAIL</h1>
-    <h1 class="header">TO DESTROY ME</h1>
+    <h1 class="header">YOU MAY NOW FAIL TO DESTROY ME</h1>
     <h2 class="subheader">AMERICAN WRITERS ON THEIR MOST DANGEROUS BELIEFS</h2>
     <p class="text">SEND YOUR WORK. ≤3000 WORDS, DON'T PUNCH DOWN. FAILTODESTROY AT GMAIL</p>
     <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN</p>
