--- a/index.html
+++ b/index.html
@@ -11,10 +11,26 @@
     <img src="https://via.placeholder.com/300" alt="Example Image" class="image" />
     <h1 class="header">YOU MAY NOW FAIL TO DESTROY ME</h1>
     <h2 class="subheader">AMERICAN WRITERS ON THEIR MOST DANGEROUS BELIEFS</h2>
-    <p class="text">SEND YOUR WORK. ≤3000 WORDS, DON'T PUNCH DOWN. FAILTODESTROY AT GMAIL</p>
-    <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN</p>
+    <p class="text">SEND YOUR WORK. ≤3000 WORDS, DON'T PUNCH DOWN. FAILTODESTROY AT GMAIL.</p>
+    <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN.</p>
     <p class="text">FEATURING WRITING BY:<br>
+      GWEN HILTON
       BRAD NEELY
+      GARY SHIPLEY
+      SAM GAGLIO
+      NEVER ANGELINE NØRTH
+      JEFF JACKSON
+      JOHN TREFRY
+      SEAN KILPATRICK
+      WYATT WILLIAMS
+      ANDER MONSON
+      ERIC RAYMOND
+      MARK LEIDNER
+      CHARLENE ELSBY
+      PHILIP CHRISTMAN
+      JIM RULAND
+      KEN BAUMANN
+      BLAKE BUTLER
     </p>
   </div>
 </body>
