--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
     <p class="text">SEND YOUR WORK. ≤3000 WORDS, DON'T PUNCH DOWN. FAILTODESTROY AT GMAIL.</p>
     <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN.</p>
     <p class="text">FEATURING WRITING BY:<br>
-      GWEN HILTON
-      BRAD NEELY
-      GARY SHIPLEY
-      SAM GAGLIO
-      NEVER ANGELINE NØRTH
-      JEFF JACKSON
-      JOHN TREFRY
-      SEAN KILPATRICK
-      WYATT WILLIAMS
-      ANDER MONSON
-      ERIC RAYMOND
-      MARK LEIDNER
-      CHARLENE ELSBY
-      PHILIP CHRISTMAN
-      JIM RULAND
-      KEN BAUMANN
-      BLAKE BUTLER
+      GWEN HILTON<br>
+      BRAD NEELY<br>
+      GARY SHIPLEY<br>
+      SAM GAGLIO<br>
+      NEVER ANGELINE NØRTH<br>
+      JEFF JACKSON<br>
+      JOHN TREFRY<br>
+      SEAN KILPATRICK<br>
+      WYATT WILLIAMS<br>
+      ANDER MONSON<br>
+      ERIC RAYMOND<br>
+      MARK LEIDNER<br>
+      CHARLENE ELSBY<br>
+      PHILIP CHRISTMAN<br>
+      JIM RULAND<br>
+      KEN BAUMANN<br>
+      BLAKE BUTLER<br>
     </p>
   </div>
 </body>
