--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <img src="https://via.placeholder.com/300" alt="Example Image" class="image" />
     <h1 class="header">YOU MAY NOW FAIL TO DESTROY ME</h1>
     <h2 class="subheader">AMERICAN WRITERS ON THEIR MOST DANGEROUS BELIEFS</h2>
-    <p class="text">OPEN SUBS TO JULY 15. ≤3000 WORDS, DON'T PUNCH DOWN. FAILTODESTROY AT GMAIL.</p>
-    <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN.</p>
-    <p class="text">FEATURING WRITING BY:<br>
+    <h2 class="subheader">A PAPERBACK & PDF</h2>
+    <p class="text">SUBMISSIONS OPEN UNTIL JULY 15, ≤3000 WORDS & DON'T PUNCH DOWN, FAILTODESTROY AT GMAIL</p>
+    <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN</p>
+    <p class="text">WRITING BY<br>
       GWEN HILTON<br>
       BRAD NEELY<br>
       GARY SHIPLEY<br>
