--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2 class="subheader">A PAPERBACK & PDF</h2>
     <p class="text">SUBMISSIONS OPEN UNTIL JULY 15, ≤3000 WORDS & DON'T PUNCH DOWN, FAILTODESTROY AT GMAIL</p>
     <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN</p>
-    <p class="text">WRITING BY<br>
+    <p class="text">WRITING BY<br><br>
       GWEN HILTON<br>
       BRAD NEELY<br>
       GARY SHIPLEY<br>
