--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="https://via.placeholder.com/300" alt="Example Image" class="image" />
+    <img src="/ymnftdm-cover.jpg" alt="YOU MAY NOW FAIL TO DESTROY ME book cover" class="image" />
     <h1 class="header">YOU MAY NOW FAIL TO DESTROY ME</h1>
     <h2 class="subheader">AMERICAN WRITERS ON THEIR MOST DANGEROUS BELIEFS</h2>
     <h2 class="subheader">A PAPERBACK & PDF</h2>
