--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <div class="container">
-    <img src="ymnftdm-cover.jpg" alt="YOU MAY NOW FAIL TO DESTROY ME book cover" class="image" />
+    <img src="ymnftdm-cover.jpg" alt="YOU MAY NOW FAIL TO DESTROY ME book cover" class="image" />M<br>
     <h1 class="header">YOU MAY NOW FAIL TO DESTROY ME</h1>
     <h2 class="subheader">AMERICAN WRITERS ON THEIR MOST DANGEROUS BELIEFS</h2>
     <h2 class="subheader">A PAPERBACK & PDF</h2>
     <p class="text">SUBMISSIONS OPEN UNTIL JULY 15, ≤3000 WORDS & DON'T PUNCH DOWN, FAILTODESTROY AT GMAIL</p>
     <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN</p>
-    <p class="text">WRITING BY:<br><br><br>
+    <p class="text">WRITING BY:<br><br>
       GWEN HILTON<br>
       BRAD NEELY<br>
       GARY SHIPLEY<br>
