--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h2 class="subheader">A PAPERBACK & PDF</h2>
     <p class="text">SUBMISSIONS OPEN UNTIL JULY 15, ≤3000 WORDS & DON'T PUNCH DOWN, FAILTODESTROY AT GMAIL</p>
     <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN</p>
-    <p class="text">WRITING BY:<br><br>
-      GWEN HILTON<br>
+    <p class="text">WRITING BY:</p>
+    <p class="text">GWEN HILTON<br>
       BRAD NEELY<br>
       GARY SHIPLEY<br>
       SAM GAGLIO<br>
@@ -31,8 +31,7 @@
       PHILIP CHRISTMAN<br>
       JIM RULAND<br>
       KEN BAUMANN<br>
-      BLAKE BUTLER<br>
-    </p>
+      BLAKE BUTLER<br></p>
   </div>
 </body>
 </html>
