--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       CHARLENE ELSBY<br>
       PHILIP CHRISTMAN<br>
       JIM RULAND<br>
+      GARRI SAGANENKO<br>
       KEN BAUMANN<br>
       BLAKE BUTLER<br></p>
   </div>
