--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       PHILIP CHRISTMAN<br>
       JIM RULAND<br>
       GARRI SAGANENKO<br>
+      JOHANNES GORANSSON<br>
+      ARIANA REINES<br>
+      KATE WAGNER<br>
       KEN BAUMANN<br>
       BLAKE BUTLER<br></p>
   </div>
