--- a/index.html
+++ b/index.html
@@ -12,30 +12,39 @@
     <h1 class="header">YOU MAY NOW FAIL TO DESTROY ME</h1>
     <h2 class="subheader">AMERICAN WRITERS ON THEIR MOST DANGEROUS BELIEFS</h2>
     <h2 class="subheader">A PAPERBACK & PDF</h2>
-    <p class="text">SUBMISSIONS OPEN UNTIL JULY 15, ≤3000 WORDS & DON'T PUNCH DOWN, FAILTODESTROYME AT GMAIL</p>
     <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN</p>
     <p class="text">WRITING BY:</p>
-    <p class="text">GWEN HILTON<br>
+    <p class="text">ANDER MONSON<br>
+      BLAKE BUTLER<br>
       BRAD NEELY<br>
-      GARY SHIPLEY<br>
-      SAM GAGLIO<br>
-      NEVER ANGELINE NØRTH<br>
-      JEFF JACKSON<br>
-      JOHN TREFRY<br>
-      SEAN KILPATRICK<br>
-      WYATT WILLIAMS<br>
-      ANDER MONSON<br>
-      ERIC RAYMOND<br>
-      MARK LEIDNER<br>
       CHARLENE ELSBY<br>
-      PHILIP CHRISTMAN<br>
-      JIM RULAND<br>
+      ERIC RAYMOND<br>
+      FROG K<br>
+      GABRIEL HART<br>
       GARRI SAGANENKO<br>
+      GARY SHIPLEY<br>
+      GWEN HILTON<br>
+      JACK SKELLEY<br>
+      JEFF JACKSON<br>
+      JIM RULAND<br>
       JOHANNES GORANSSON<br>
-      ARIANA REINES<br>
-      KATE WAGNER<br>
+      JOHN TREFRY<br>
+      JONCE PALMER<br>
+      KATE BARSS<br>
       KEN BAUMANN<br>
-      BLAKE BUTLER<br></p>
+      LOGAN BERRY<br>
+      MARK LEIDNER<br>
+      MATTHEW DEXTER<br>
+      NEVER ANGELINE NØRTH<br>
+      NICHOLAS RHOMBES<br>
+      NICK MAMATAS<br>
+      PHILIP CHRISTMAN<br>
+      PHOEBE KAUFMAN<br>
+      SAM GAGLIO<br>
+      SEAN KILPATRICK<br>
+      SHAYNA GOODMAN<br>
+      WYATT WILLIAMS<br>
+    </p>
   </div>
 </body>
 </html>
