--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <img src="ymnftdm-cover.jpg" alt="YOU MAY NOW FAIL TO DESTROY ME book cover" class="image" /><br>
     <h1 class="header">YOU MAY NOW FAIL TO DESTROY ME</h1>
     <h2 class="subheader">AMERICAN WRITERS ON THEIR MOST DANGEROUS BELIEFS</h2>
-    <h2 class="subheader"><a href="https://kenbaumann.gumroad.com/l/failtodestroy-paper">PRE-ORDER THE PAPERBACK</a></h2>
-    <h2 class="subheader"><a href="https://kenbaumann.gumroad.com/l/failtodestroy-pdf">BUY THE PDF</a></h2>
+    <h2 class="subheader">PRE-ORDER THE PAPERBACK SOON</h2>
+    <h2 class="subheader">BUY THE PDF SOON</h2>
     <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN</p>
     <p class="text">WRITING BY:</p>
     <p class="text">ANDER MONSON<br>
