--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <img src="ymnftdm-cover.jpg" alt="YOU MAY NOW FAIL TO DESTROY ME book cover" class="image" /><br>
     <h1 class="header">YOU MAY NOW FAIL TO DESTROY ME</h1>
     <h2 class="subheader">AMERICAN WRITERS ON THEIR MOST DANGEROUS BELIEFS</h2>
-    <h2 class="subheader">PRE-ORDER THE PAPERBACK SOON</h2>
-    <h2 class="subheader">BUY THE PDF SOON</h2>
+    <h2 class="subheader"><a href="https://9gykcv-bf.myshopify.com/products/you-may-now-fail-to-destroy-me-paperback>PRE-ORDER THE PAPERBACK</a></h2>
+    <h2 class="subheader"><a href="https://9gykcv-bf.myshopify.com/products/you-may-now-fail-to-destroy-me-pdf>BUY THE PDF</a></h2>
     <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN</p>
     <p class="text">WRITING BY:</p>
     <p class="text">ANDER MONSON<br>
@@ -30,12 +30,14 @@
       JIM RULAND<br>
       JOHANNES GORANSSON<br>
       JOHN TREFRY<br>
-      JONCE PALMER<br>
+      JONCE MARSHALL PALMER<br>
       KATE BARSS<br>
+      KATE WAGNER<br>
       KEN BAUMANN<br>
       LOGAN BERRY<br>
       MARK LEIDNER<br>
       MATTHEW DEXTER<br>
+      MEGAN BOYLE<br>
       NEVER ANGELINE NØRTH<br>
       NICHOLAS RHOMBES<br>
       NICK MAMATAS<br>
