--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="ymnftdm-cover.jpg" alt="YOU MAY NOW FAIL TO DESTROY ME book cover" class="image" /><br>
+    <img src="ymnftdm_front-cover_hi.jpg" alt="YOU MAY NOW FAIL TO DESTROY ME book cover" class="image" /><br>
     <h1 class="header">YOU MAY NOW FAIL TO DESTROY ME</h1>
     <h2 class="subheader">AMERICAN WRITERS ON THEIR MOST DANGEROUS BELIEFS</h2>
     <h2 class="subheader"><a href="https://9gykcv-bf.myshopify.com/products/you-may-now-fail-to-destroy-me-paperback>PRE-ORDER THE PAPERBACK</a></h2>
