--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 class="header">YOU MAY NOW FAIL TO DESTROY ME</h1>
     <h2 class="subheader">AMERICAN WRITERS ON THEIR MOST DANGEROUS BELIEFS</h2>
     <h2 class="subheader"><a href="https://failtodestroyme.myshopify.com/products/you-may-now-fail-to-destroy-me-paperback?utm_source=copyToPasteBoard&utm_medium=product-links&utm_content=web">PRE-ORDER THE PAPERBACK</a></h2>
-    <h2 class="subheader"><a href="https://failtodestroyme.com/products/you-may-now-fail-to-destroy-me-pdf?utm_source=copyToPasteBoard&utm_medium=product-links&utm_content=web">BUY THE PDF</a></h2>
+    <h2 class="subheader"><a href="https://failtodestroyme.myshopify.com/products/you-may-now-fail-to-destroy-me-pdf?utm_source=copyToPasteBoard&utm_medium=product-links&utm_content=web">BUY THE PDF</a></h2>
     <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN</p>
     <p class="text">WRITING BY:</p>
     <p class="text">ANDER MONSON<br>
