--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <img src="ymnftdm_front-cover_hi.jpg" alt="YOU MAY NOW FAIL TO DESTROY ME book cover" class="image"><br>
     <h1 class="header">YOU MAY NOW FAIL TO DESTROY ME</h1>
     <h2 class="subheader">AMERICAN WRITERS ON THEIR MOST DANGEROUS BELIEFS</h2>
+    <h2 class="subheader"><a href="https://failtodestroyme.myshopify.com/products/you-may-now-fail-to-destroy-me-paperback">PRE-ORDER THE PAPERBACK</a></h2>
+    <h2 class="subheader"><a href="https://failtodestroyme.myshopify.com/products/you-may-now-fail-to-destroy-me-pdf">BUY THE PDF</a></h2>
     <p class="text">EDITED BY BLAKE BUTLER & KEN BAUMANN</p>
     <p class="text">WRITING BY:</p>
     <p class="text">ANDER MONSON<br>
